# makkuro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml  zizmor.yml
Formula/: makkuro.rb
bench/: run_eval.py
bench/data/toy/: samples.json
bench/evaluator/: __init__.py  metrics.py
docs/: SPEC.md
examples/: makkuro.toml
scripts/: gen_manifest.py  update_formula.py
src/makkuro/: __init__.py  allowlist.py  audit.py  cli.py  config.py  integrity.py  pipeline.py  placeholder.py  policy.py
src/makkuro/detectors/: __init__.py  base.py  custom.py  iban.py  ipv4.py  jp_pii.py  regex_base.py  secrets.py  url.py
src/makkuro/protocol/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/makkuro/proxy/: __init__.py  app.py  egress.py  redactor.py  server.py  sse.py
src/makkuro/schema/: makkuro.schema.json
src/makkuro/vault/: __init__.py  age.py  base.py  memory.py
tests/: test_age_vault.py  test_allowlist.py  test_audit.py  test_audit_stats.py  test_bench_runner.py  test_cli.py  test_config.py  test_custom_patterns.py  test_detectors.py  test_gemini_adapter.py  test_iban.py  test_integrity.py  test_ipv4.py  test_mcp_deep_redact.py  test_min_score.py  test_openai_adapter.py  test_per_type_stats.py  test_placeholder.py  test_policy.py  test_protocol.py  test_proxy.py  test_proxy_custom_and_allowlist.py  test_proxy_multiprovider.py  test_proxy_streaming.py  test_response_redaction.py  test_secrets.py  test_shutdown_timeout.py  test_sse_rehydrator.py  test_url.py  test_vault.py
