[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "makkuro"
version = "0.0.1"
description = "Local redaction proxy for AI CLIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "sotanengel" }]
keywords = ["ai", "cli", "redaction", "proxy", "pii", "security"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "starlette==0.41.3",
  "uvicorn==0.32.1",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.6",
]

[project.scripts]
makkuro = "makkuro.cli:main"

[project.urls]
Homepage = "https://github.com/sotanengel/makkuro"
Issues = "https://github.com/sotanengel/makkuro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/makkuro"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "bench"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"bench/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
