[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "makkuro"
version = "0.1.0"
description = "Local redaction proxy for AI CLIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "sotanengel" }]
keywords = ["ai", "cli", "redaction", "proxy", "pii", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "starlette==0.49.1",
  "uvicorn==0.32.1",
  "httpx==0.28.1",
]

[project.optional-dependencies]
age = [
  # Persistent age-encrypted vault. Optional because the native build
  # step is heavy; most users are fine with the in-memory vault.
  "pyrage==1.3.0",
]

# PEP 735 dependency groups. uv picks these up via `uv sync --group dev`.
# Kept separate from `[project.optional-dependencies]` because dev tooling
# should never land on a consumer's machine via `pip install makkuro[dev]`.
[dependency-groups]
dev = [
  "pyrage==1.3.0",
  "pytest==9.0.3",
  "ruff==0.8.6",
]

[project.scripts]
makkuro = "makkuro.cli:main"

[project.urls]
Homepage = "https://github.com/sotanengel/makkuro"
Issues = "https://github.com/sotanengel/makkuro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/makkuro"]

# Route `uv` installs through Takumi Guard (known-malicious releases are
# blocked before they execute) with public PyPI as the fallback index for
# packages still inside the Takumi Guard quarantine window. See
# README.md#takumi-guard-サプライチェーン保護 and SECURITY.md.
[[tool.uv.index]]
name = "takumi-guard"
url = "https://pypi.flatt.tech/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "bench"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"bench/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
